<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".ui.auth.SignupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="0.3">

        <View
            android:id="@+id/topView"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/purple_700" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/topView"
            android:background="@drawable/ic_wave__2_" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:gravity="top"
        android:layout_weight="0.7">

        <EditText
            android:id="@+id/inputUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/input_username"
            android:padding="16dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputUserName"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/input_email"
            android:padding="16dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputEmail"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/input_password"
            android:padding="16dp"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/inputPassword"
            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/round_bg"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_below="@id/btnRegister"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_member" />
            <TextView
                android:layout_marginStart="2dp"
                android:id="@+id/signUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/purple_700"
                android:text="@string/login" />

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>