<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="0.3">

        <View
            android:id="@+id/topView"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="#ff5500" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/topView"
            android:background="@drawable/ic_wave__2_" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:gravity="center"
        android:layout_weight="0.7">

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/round_border"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/input_email"
                android:padding="16dp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputEmail"
                android:inputType="text"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_border"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/input_password"
                android:padding="16dp"
                android:autofillHints="" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/inputPassword"
                android:layout_marginTop="32dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/round_bg"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
<!--        <Button-->
<!--            android:id="@+id/btnRegister"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_below="@id/btnLogin"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginStart="24dp"-->
<!--            android:layout_marginEnd="24dp"-->
<!--            android:background="@drawable/round_bg"-->
<!--            android:text="REGISTER"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="18sp"-->
<!--            android:textStyle="bold" />-->
        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_pass"
            android:layout_centerHorizontal="true"
            android:textColor="#ff5500"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_below="@id/forgotPassword"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account" />
            <TextView
                android:layout_marginStart="2dp"
                android:id="@+id/signUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/purple_700"
                android:text="@string/signup" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/linearLayout"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/or" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signInButton"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_below="@id/textView2"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>


</LinearLayout>